terraform/modules/compute/web-app-al2/main.tf
resource "aws_key_pair" "my_key" {
  key_name   = "my-tf-key"
  public_key = file("~/.ssh/root_key_Access-tf.pub")
}
resource "aws_instance" "web_app" {
  ami                    = var.ami_id[terraform.workspace]
  instance_type          = var.instance_type[terraform.workspace]
  key_name               = aws_key_pair.my_key.key_name
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]

  tags = {
    Name = "${terraform.workspace}-web_app"
  }
}

resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
